Slight styling fix for skills section on narrower screens

--- a/src/components/styles/Skills.css
+++ b/src/components/styles/Skills.css
@@ -9,6 +9,12 @@
         flex-direction: column;
         height: 100vh !important;
     }
+
+    .Subcategories {
+        display: flex;
+        height: 50%;
+        justify-content: center !important;
+    }
 }
 
 @Media (max-width: 400px) {
